<resources>
    <string name="app_name">Harjoitustyo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="create_graph">Create Graph</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cases_total">Total</string>
    <string name="cases_7days">7 days</string>
    <string name="cases_14days">14 days</string>
    <string name="cases_30days">30 days</string>
    <string name="cases_100days">100 days</string>

    <string name="header_statistics">Coronavirus Statistics</string>
    <string name="filter">Filters</string>

    <string name="statistics_edit_filters">Edit Filters</string>
    <string name="statistics_region">Region</string>
    <string name="statistics_city">City</string>
    <string name="statistics_sensor">Sensor</string>
    <string name="statistics_age">Age</string>
    <string name="statistics_sex">Sex</string>

    <string name="saved_graph_open">Open</string>
    <string name="saved_graph">Saved Graphs</string>
    <string name="graph_filename">File name</string>
    <string name="graph_save_header">Save graph</string>
    <string name="graph_save">Save</string>
    <string name="graph_back">Back</string>
    <string name="graph_main_header">Create Graph</string>
    <string name="graph_set_date">Set</string>
    <string name="graph_set_date_start">Start</string>
    <string name="graph_set_date_end">End</string>
    <string name="statistics_sex4">Sex</string>

    <string name="languages_fin">Finnish</string>
    <string name="languages_en">English</string>

    <string name="description">With Korona-App you can check corona statistics, and draw gaphs.
        Data can be limited with tools provided by THL </string>


</resources>