<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/main"
            android:icon="@drawable/ic_coronavirus"
            android:title="@string/main"></item>

        <item
            android:id="@+id/statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"></item>

        <item
            android:id="@+id/create_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/create_graph"></item>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"></item>

    </group>

</menu>